--- a/css/base.css
+++ b/css/base.css
@@ -7,32 +7,56 @@ body {
   font-family: "Source Code Pro", Consolas, monospace;
   font-size: 16px; }
 
+button {
+  background-color: #0568b4;
+  border-radius: 8px;
+  color: white;
+  font-family: "Source Code Pro", Consolas, monospace;
+  font-size: 22px;
+  padding: 24px 16px;
+  border: 0; }
+
 svg#brand {
-  margin: 42px auto 0;
+  margin: 32px auto 0;
   display: block; }
   svg#brand:hover #outer {
     -webkit-animation: logo-press .4s ease-in-out 1 forwards; }
   svg#brand #outer {
-    transform-origin: 45px 42px; }
+    transform-origin: 45px 41px; }
 
 main {
-  margin-top: 42px; }
+  margin-top: 32px; }
   main button#soundzee {
     border-radius: 100%;
     border: 0;
     display: block;
     font-size: 32px;
     font-weight: bold;
-    min-width: 280px;
-    min-height: 280px;
+    min-width: 260px;
+    max-width: 260px;
+    min-height: 260px;
+    max-height: 260px;
     padding: 24px;
     outline: 0;
     background-color: #ff8517;
     width: 70%;
     margin: 0 auto;
-    color: #0568b4;
-    font-family: "Source Code Pro", Consolas, monospace; }
+    color: white;
+    font-family: "Source Code Pro", Consolas, monospace;
+    z-index: 999;
+    position: relative; }
     main button#soundzee.pressed {
+      -webkit-animation: soundzee-press .4s ease-in-out 1; }
+
+footer {
+  margin: 42px 0 0; }
+  footer button {
+    margin: 0 auto;
+    display: block;
+    min-width: 240px;
+    width: 70%;
+    max-width: 320px; }
+    footer button.pressed {
       -webkit-animation: soundzee-press .4s ease-in-out 1; }
 
 @-webkit-keyframes logo-press {
@@ -40,7 +64,7 @@ main {
     -webkit-transform: rotate(1turn); } }
 @-webkit-keyframes soundzee-press {
   70% {
-    box-shadow: 0 0 0 30px #0568b4, inset 0 0 0 20px #e36c00;
+    box-shadow: 0 0 0 30px #0568b4, inset 0 0 0 10px rgba(0, 0, 0, 0.1);
     -webkit-transform: scale(0.9, 0.9); }
   100% {
     box-shadow: 0 0 0 100px transparent, inset 0 0 0 100px transparent; } }
